dev/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: ssag-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/subnets: "subnet-0b6c28e28fa038b90,subnet-03b783ec16f9ba2ec,subnet-00a702231116e6a23"
spec:
  rules:
    - http:
        paths:
          # product-service
          - path: /api/v1/main-products
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /css
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /api/v1/categories
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /api/v1/products-active
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80
          - path: /api/v1/reviews
            pathType: Prefix
            backend:
              service:
                name: product-service-active
                port:
                  number: 80

          # analysis-service
          - path: /api/v1/etl
            pathType: Prefix
            backend:
              service:
                name: analysis-service-active
                port:
                  number: 80
          - path: /api/v1/user-event-active
            pathType: Prefix
            backend:
              service:
                name: analysis-service-active
                port:
                  number: 80
          - path: /api/v1/session-cluster
            pathType: Prefix
            backend:
              service:
                name: analysis-service-active
                port:
                  number: 80

          # recommend-service
          - path: /api/v1/recommendation
            pathType: Prefix
            backend:
              service:
                name: recommend-service-active
                port:
                  number: 80
